--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head></head>
 
-	<body>hello world</body>
+	<body>
+	<h1>Hello world<h1>
+	</body>
 	<script src="bundle.js"></script>
 </html>
