--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,18 @@
 
 	<body>
 	<h1>Hello world<h1>
+
+	<table>
+		<thead>
+			<th>&nbsp;</th>
+			<th>Id</th>
+			<th>First Name</th>
+			<th>Last Name</th>
+		</thead>
+		<tbody id="users">
+			
+		</tbody>
+	</table>
 	</body>
 	<script src="bundle.js"></script>
 </html>
